// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: Should not support front matter format[acorn]} 1`] = `
"Assigning to rvalue (1:3)
> 1 | ---
    |   ^
  2 | Front Matter content
  3 | ---
Cause: Assigning to rvalue (1:2)"
`;

exports[`snippet: Should not support front matter format[acorn]} 2`] = `
"Assigning to rvalue (1:3)
> 1 | ---
    |   ^
  2 | Front Matter content
  3 | ---
Cause: Assigning to rvalue"
`;

exports[`snippet: Should not support front matter format[acorn]} 3`] = `
"Parser Error: Unexpected token 'Matter' (2:7)
  1 | ---
> 2 | Front Matter content
    |       ^
  3 | ---
Cause: Parser Error: Unexpected token 'Matter'
Cause: Parser Error: Unexpected token 'Matter' at column 11 in [---
Front Matter content
---] in test.html@0:0"
`;

exports[`snippet: Should not support front matter format[acorn]} 4`] = `
"Parser Error: Unexpected token 'Matter' (2:7)
  1 | ---
> 2 | Front Matter content
    |       ^
  3 | ---
Cause: Parser Error: Unexpected token 'Matter'
Cause: Parser Error: Unexpected token 'Matter' at column 11 in [---
Front Matter content
---] in test.html@0:0"
`;

exports[`snippet: Should not support front matter format[acorn]} 5`] = `
"Parser Error: Unexpected token 'Matter' (2:7)
  1 | ---
> 2 | Front Matter content
    |       ^
  3 | ---
Cause: Parser Error: Unexpected token 'Matter'
Cause: Parser Error: Unexpected token 'Matter' at column 11 in [---
Front Matter content
---] in test.html@0:0"
`;

exports[`snippet: Should not support front matter format[acorn]} 6`] = `
"Parser Error: Unexpected end of expression: ---
Front Matter content
--- at the end of the expression [---
Front Matter content
---] (1:0)
> 1 | ---
  2 | Front Matter content
  3 | ---
Cause: Parser Error: Unexpected end of expression: ---
Front Matter content
--- at the end of the expression [---
Front Matter content
---]
Cause: Parser Error: Unexpected end of expression: ---
Front Matter content
--- at the end of the expression [---
Front Matter content
---] in test.html@0:0"
`;

exports[`snippet: Should not support front matter format[acorn]} 7`] = `
"Unexpected token (3:4)
  1 | ---
  2 | Front Matter content
> 3 | ---
    |    ^
Cause: Unexpected token (3:3)"
`;

exports[`snippet: Should not support front matter format[acorn]} 8`] = `
"Unexpected token (3:4)
  1 | ---
  2 | Front Matter content
> 3 | ---
    |    ^
Cause: Unexpected token (3:3)"
`;

exports[`snippet: Should not support front matter format[acorn]} 9`] = `
"Unexpected token (3:4)
  1 | ---
  2 | Front Matter content
> 3 | ---
    |    ^
Cause: Unexpected token (3:3)"
`;

exports[`snippet: Should not support front matter format[acorn]} 10`] = `
"The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:7)
  1 | ---
> 2 | Front Matter content
    |       ^
  3 | ---
Cause: Unexpected parseExpression() input: The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:6)"
`;

exports[`snippet: Should not support front matter format[acorn]} 11`] = `
"The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:7)
  1 | ---
> 2 | Front Matter content
    |       ^
  3 | ---
Cause: Unexpected parseExpression() input: The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:6)"
`;

exports[`snippet: Should not support front matter format[acorn]} 12`] = `
"The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:7)
  1 | ---
> 2 | Front Matter content
    |       ^
  3 | ---
Cause: Unexpected parseExpression() input: The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:6)"
`;

exports[`snippet: Should not support front matter format[acorn]} 13`] = `
"The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:7)
  1 | ---
> 2 | Front Matter content
    |       ^
  3 | ---
Cause: Unexpected parseExpression() input: The input should contain exactly one expression, but the first expression is followed by the unexpected character \`M\`. (2:6)"
`;

exports[`snippet: Should not support front matter format[acorn]} 14`] = `
"Unexpected token (3:4)
  1 | ---
  2 | Front Matter content
> 3 | ---
    |    ^
Cause: Unexpected token (3:3)"
`;

exports[`snippet: Should not support front matter format[acorn]} 15`] = `
"Unexpected token (3:4)
  1 | ---
  2 | Front Matter content
> 3 | ---
    |    ^
Cause: Unexpected token (3:3)"
`;

exports[`snippet: Should not support front matter format[acorn]} 16`] = `
"Unexpected token (3:4)
  1 | ---
  2 | Front Matter content
> 3 | ---
    |    ^
Cause: Unexpected token (3:3)"
`;

exports[`snippet: Should not support front matter format[acorn]} 17`] = `
"Invalid left-hand side in prefix operation. (1:3)
> 1 | ---
    |   ^
  2 | Front Matter content
  3 | ---
Cause: Invalid left-hand side in prefix operation. (1:2)"
`;

exports[`snippet: Should not support front matter format[acorn]} 18`] = `
"Invalid left-hand side in prefix operation. (1:3)
> 1 | ---
    |   ^
  2 | Front Matter content
  3 | ---
Cause: Invalid left-hand side in prefix operation. (1:2)"
`;

exports[`snippet: Should not support front matter format[acorn]} 19`] = `
"Invalid left-hand side in prefix operation. (1:3)
> 1 | ---
    |   ^
  2 | Front Matter content
  3 | ---
Cause: Invalid left-hand side in prefix operation. (1:2)"
`;

exports[`snippet: Should not support front matter format[acorn]} 20`] = `
"Invalid left-hand side in prefix operation. (1:3)
> 1 | ---
    |   ^
  2 | Front Matter content
  3 | ---
Cause: Invalid left-hand side in prefix operation. (1:2)"
`;

exports[`snippet: Should not support front matter format[acorn]} 21`] = `
"Invalid left-hand side in assignment (1:3)
> 1 | ---
    |   ^
> 2 | Front Matter content
    | ^^^^^^
  3 | ---"
`;

exports[`snippet: Should not support front matter format[acorn]} 22`] = `
"Syntax Error: Invalid number, expected digit but got: "-". (1:2)
> 1 | ---
    |  ^
  2 | Front Matter content
  3 | ---
Cause: Syntax Error: Invalid number, expected digit but got: "-"."
`;

exports[`snippet: Should not support front matter format[acorn]} 23`] = `
"Invalid increment/decrement operand (2:7)
  1 | ---
> 2 | Front Matter content
    |       ^^^^^^
  3 | ---
Cause: [2:6-2:12]: Invalid increment/decrement operand"
`;

exports[`snippet: Should not support front matter format[acorn]} 24`] = `
"Expression expected. (1:3)
> 1 | ---
    |   ^
  2 | Front Matter content
  3 | ---
Cause: Expression expected."
`;
